RESOLVED FIXED 280311
[UnifiedPDF] [iOS] WKWebView._displayingPDF is wrong when the feature is enabled
https://bugs.webkit.org/show_bug.cgi?id=280311
Summary [UnifiedPDF] [iOS] WKWebView._displayingPDF is wrong when the feature is enabled
Abrar Rahman Protyasha
Reported 2024-09-24 17:52:45 PDT
Attachments
Abrar Rahman Protyasha
Comment 1 2024-09-24 17:59:13 PDT
EWS
Comment 2 2024-09-24 22:56:08 PDT
Committed 284206@main (daf9470519ba): <https://commits.webkit.org/284206@main> Reviewed commits have been landed. Closing PR #34203 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.