[UnifiedPDF] [iOS] WKWebView._displayingPDF is wrong when the feature is enabled https://bugs.webkit.org/show_bug.cgi?id=280311 rdar://136634661

Reviewed by Wenson Hsieh.

When UnifiedPDFEnabled==YES, we do not have the WKPDFView custom content
view on the iOS family. However, currently, regardless of feature
enablement, we only check for the presence of an appropriate custom
content view for the PDF mime type to determine if we are presenting a
PDF document on the iOS family.

This patch widens the scope of the "PDF document on the main frame"
check currently inquired for macOS only, being careful to fallback to
existing checks in case UnifiedPDFEnabled==NO.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _isDisplayingPDF]):

* Tools/TestWebKitAPI/Tests/WebKitCocoa/UnifiedPDFTests.mm:
(TestWebKitAPI::UNIFIED_PDF_TEST):

Add an API test exercising WKWebView._displayingPDF with Unified PDF
enabled. Test coverage for when the feature is disabled is covered by
the WKWebView.IsDisplayingPDF test.

Canonical link: https://commits.webkit.org/284206@main